<resources>
    <string name="app_name">RealsApp</string>
    <string name="title_activity_dashboard">Principal menu</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_details">Details property</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="property_favourite">My favourites</string>
    <string name="loginTitle">Login</string>
    <string name="my_property">My properties</string>
    <string name="rooms">Rooms</string>
    <string name="Price">Price</string>
    <string name="price">Price</string>
    <string name="euro">€</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>

    <string name="register">Register</string>
    <string name="appName">RealStateApp</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_size">Size between 6 and 15</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="userId">userId</string>
    <string name="cancel">Cancel</string>
    <string name="logoutTittle">Logout</string>
    <string name="addressTitle">Address</string>
    <string name="login">Login</string>
    <string name="category">Category</string>
    <string name="logoutDialog">¿Do you want to logout?</string>
    <string name="accept">Accept</string>
    <string name="title_activity_create_property">CreatePropertyActivity</string>
    <string name="ok">Ok</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="region_dialog">Region:</string>
    <string name="province_dialog">Province</string>
    <string name="city_dialog">City:</string>
    <string name="price_prop">Price</string>
    <string name="zipcode_prop">Zip code</string>
    <string name="size_prop">Size</string>
    <string name="address_prop">Address</string>
    <string name="ready_bt_label">Ready</string>
    <string name="createProperty">Create property</string>
    <string name="deleteDialog">¿Are you sure?</string>
    <string name="editProperty">Edit property</string>
    <string name="edit">Edit</string>
    <string name="onlyLetter">Only letters</string>
    <string name="selectOne">Select one.</string>
    <string name="filter">Filter</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="rooms_prop">Rooms</string>
    <string name="ubication">Active ubication permission</string>
    <string name="Size">Size</string>
</resources>
