<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_every_property"
            android:icon="@drawable/ic_all"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_property"
            android:icon="@drawable/ic_my_property"
            android:title="@string/my_property" />
        <item
            android:id="@+id/nav_favourite_property"
            android:icon="@drawable/ic_hand"
            android:title="@string/property_favourite" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/loginTitle" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logoutTittle"
            android:enabled="true"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
