<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/Fondo">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#fa870c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"


        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <CheckBox
        android:id="@+id/checkRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="Recordar Email"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonround"
        android:drawableRight="@drawable/login"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/loginTitle"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/checkRecordar" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonroundoscuro"
        android:drawableRight="@drawable/registro"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/appName"
        android:textColor="@color/Cabecera"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleDetail"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleDetail"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDetail" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toEndOf="@+id/textViewTitleDetail"
        app:layout_constraintTop_toTopOf="@+id/textViewTitleDetail"
        app:srcCompat="@drawable/ic_real_state" />
</android.support.constraint.ConstraintLayout>